[package]
name = "mhw_planner"
version = "0.0.1"
authors = ["Scott Harper <orcein@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
# failure = "0.1.5"
scraper = "*"
urlencoding = "1"

glium = { version = "0.23", default-features = true }
imgui = {version = "0.0.23-pre", path = "../imgui-rs/"}
imgui-glium-renderer = { version = "0.0.23-pre", path = "../imgui-rs/imgui-glium-renderer" }
imgui-winit-support = {version = "0.0.23-pre", path  = "../imgui-rs/imgui-winit-support/"}
image = "0.20"
